[gd_scene load_steps=6 format=3 uid="uid://c2fx1mfojm5cm"]

[ext_resource type="Texture2D" uid="uid://c1truygnsh138" path="res://assets/map/traffic_red.png" id="1_innoh"]
[ext_resource type="Script" path="res://scenes/traffic/Traffic.gd" id="1_q1lga"]
[ext_resource type="Texture2D" uid="uid://47ti7a4rnlec" path="res://assets/map/traffic_green.png" id="2_iweds"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_et1gr"]
size = Vector2(610, 248)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lad2j"]
size = Vector2(90, 246)

[node name="Traffic" type="Node2D"]
script = ExtResource("1_q1lga")

[node name="Red" type="Sprite2D" parent="."]
texture = ExtResource("1_innoh")

[node name="Green" type="Sprite2D" parent="."]
texture = ExtResource("2_iweds")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
unique_name_in_owner = true
position = Vector2(33, 190)
shape = SubResource("RectangleShape2D_et1gr")

[node name="OnGoArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnGoArea"]
position = Vector2(-304, 190)
shape = SubResource("RectangleShape2D_lad2j")

[node name="OnReturnArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="OnReturnArea"]
position = Vector2(584, 191)
shape = SubResource("RectangleShape2D_lad2j")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="OnGoArea" to="." method="_on_on_go_area_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
